# nomoroov

./: .gitignore  LICENSE  README.md  cook_imdb_data.py  cook_quora_duplicated_questions_data.py  cook_quora_sentence_embedding_benchmark.py  cook_quora_sentence_embedding_data.py  cook_sentence_embedding_data.py  cook_wikipedia_simple_data.py  data_schema.py  database.py  dataset_utils.py  evaluate.ipynb  evaluate.py  evaluate_quora_duplicated_questions.py  evaluation.py  evalutate.py  fine_tune_sentence_embedding.py  load_spacy.py  main.py  make_noise.ipynb  makefile  openwebtext.py  process_books_dataset.py  process_openwebtext.py  pyproject.toml  range_loss_calc_demonstration.ipynb  sentence_embedding_model.py  sentence_embedding_model_v3.py  sentence_embedding_model_v7.py  spacy-word-vector-as-one-hot-encoding.ipynb  train_sentence_embedding.ipynb  train_sentence_embedding.py  tryit2.py
datasets/: cnbc_headlines.txt  guardian_headlines.txt  reuters_headlines.txt
mics/: pairing_combinatory_algorithm_illustrate.py
models/v12/: epoch16_encoder1  epoch16_encoder2
models/v13/: epoch17_encoder1  epoch17_encoder2  epoch21_encoder1  epoch21_encoder2
models/v15/: epoch1_encoder1  epoch1_encoder2
models/v16/: epoch3_encoder1  epoch3_encoder2  epoch4_encoder1  epoch4_encoder2
nomoroov/: analyse_oov_in_corpus.py  base_nlp.py  datasource.py  get_logger.py  normalise_data.py  oov_embedding_model.py  oov_training.py  oov_training_data.py  process_data.py  spacy_nlp.py  type_helpers.py
tests/: test_analyse_oov_in_corpus.py  test_oov_training_data.py
(+14 files in other folders)
