[tool.poetry]
name = "nomoroov"
version = "0.1.0"
description = ""
authors = ["Sang Dao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.4"
torch = "^2.1.0"
numpy = "^1.26.4"
pydantic = "^2.7.0"
pytest = "^8.1.1"
mypy = "^1.9.0"
flake8 = "^7.0.0"
jupyterlab = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
